# PDFToolKit

./: .gitignore  README.md  devlog.md  pyguiadapter-1.0.7-py3-none-any.whl  pyproject.toml
pdftoolkit/: application.py  assets.py  configuration.py  constants.py  externals.py  logme.py  main.py  metadata.py  translation.py  utils.py
pdftoolkit/assets/: pdf2images.html
pdftoolkit/assets/locales/: about.en_US.txt  about.zh_CN.txt  app.en_US.json  app.zh_CN.json  pdf2images.en_US.html  pdf2images.zh_CN.html
pdftoolkit/common_configs/: __init__.py  common_widget_configs.py  menus.py  parameters.py  select_window_config.py  select_window_menus.py
pdftoolkit/common_validators/: basic.py  filepath.py
pdftoolkit/common_variables/: dtime.py  runtime.py
pdftoolkit/commons/: app_config.py  app_meta.py  app_path.py  app_translation.py  constants.py  exceptions.py  utils.py
pdftoolkit/commons/context_variables/: __init__.py
pdftoolkit/commons/ui/: actions.py
pdftoolkit/commons/validators/: basic.py  filepath.py
pdftoolkit/commons/variables/: rand.py
pdftoolkit/configs/: __init__.py  common_actions.py  common_menus.py
pdftoolkit/configs/select_window/: __init__.py  window_listener.py  window_menus.py
pdftoolkit/converters/: __init__.py  commons.py
pdftoolkit/core/: filename_generator.py  page_iterator.py
pdftoolkit/select_window/: config.py  menus.py
pdftoolkit/tools/: __init__.py  images2pdf.py  pdf2images.py  pdfsplitters.py  select_window.py
pdftoolkit/widgets/: __init__.py  pdflistview.py  rect_widget.py  rectselect.py
(+37 files in other folders)
