[tool.poetry]
name = "pdftoolkit"
version = "0.1.0"
description = ""
authors = ["zimolab <zimolab@aliyun.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
pyguiadapter = "^1.0.5"
pymupdf = "^1.24.13"
qtmodern = "^0.2.0"
pillow = "^11.0.0"
py-multitasking = "^0.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
priority = "primary"